targets/srv0/k3s/plik/plik.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plik
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plik
  template:
    metadata:
      labels:
        app: plik
    spec:
      securityContext:
        fsGroup: $MY_UID
      containers:
        - name: plik
          image: rootgg/plik:1.4.2
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data/files
            - name: state
              mountPath: /data/state
            - name: config
              mountPath: /home/plik/server/plikd.cfg
              subPath: plikd.cfg
              readOnly: true
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: plik-data-pvc
        - name: state
          persistentVolumeClaim:
            claimName: plik-state-pvc
        - name: config
          secret:
            secretName: plik-config
---
apiVersion: v1
kind: Service
metadata:
  name: plik
  namespace: apps
spec:
  selector:
    app: plik
  ports:
    - name: http
      port: 8080
      targetPort: 8080
