targets/srv0/k3s/plik/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plik-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
    - websecure-proxy
  routes:
    - match: Host(`send.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: geoblock
          namespace: base
        - name: crowdsec-bouncer
          namespace: base
        - name: forwardauth-authelia
          namespace: base
      services:
        - name: plik
          port: 8080
  tls:
    secretName: plik-prod-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plik-ingress-local
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`send.home.local`)
      kind: Rule
      middlewares:
        - name: lan-whitelist
          namespace: base
      services:
        - name: plik
          port: 8080
  tls: {}
